clear health db check

--- a/backend/package.json
+++ b/backend/package.json
@@ -36,8 +36,7 @@
     "clean": "rm -rf dist coverage .nyc_output",
     "clean:all": "npm run clean && rm -rf node_modules package-lock.json",
     "reinstall": "npm run clean:all && npm install",
-    "health:check": "curl -f http://localhost:3000/health || exit 1",
-    "health:db": "curl -f http://localhost:3000/health/db || exit 1",
+    "health:check": "curl -f http://localhost:3000 || exit 1",
     "dev:setup": "npm install && npm run db:create && npm run db:migrate",
     "dev:start": "npm run start:dev",
     "prod:setup": "npm install --production && npm run build",
